# mimicry

./: .gitignore
emulator/: Cargo.toml
emulator/browser/: Cargo.toml  build.sh  deploy.sh  index.html
emulator/browser/src/: lib.rs  renderer.rs
emulator/common/: Cargo.toml
emulator/common/src/: lib.rs
emulator/common/src/device/: mod.rs
emulator/common/src/device/core/: mod.rs
emulator/common/src/device/core/inspector/: mod.rs
emulator/common/src/device/core/inspector/item/: group.rs  label.rs  mod.rs
emulator/common/src/device/core/inspector/tracker/: logic.rs  mod.rs  source.rs  value.rs
emulator/common/src/device/core/logic/: input.rs  logic.rs  mod.rs  register.rs  value.rs
emulator/common/src/types/: color.rs  key.rs  mod.rs  renderer.rs  vector.rs  vertex.rs
emulator/linux/: Cargo.toml
emulator/linux/src/: main.rs  renderer.rs
emulator/programs/: test.logic
emulator/src/: main.rs
emulator/src/core/: mod.rs
emulator/src/core/inspector/: formatting.rs  item.rs  mod.rs  source.rs  tracker.rs  value.rs
emulator/src/core/logic/: constant.rs  gate.rs  mod.rs  operator.rs  output.rs
